<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.firstzoom.milelog.ScrollingActivity">
    <item
        android:id="@+id/action_track"
        android:icon="@drawable/ic_action_tracker"
        android:orderInCategory="100"
        android:title="@string/action_track"
        app:showAsAction="always" />
    <item
        android:id="@+id/importFragment"
        android:orderInCategory="100"
        android:title="@string/action_import"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>