<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:elevation="@dimen/card_view_elevation"
        android:padding="@dimen/padding_med"
        app:cardCornerRadius="@dimen/card_view_corner_radius"
        app:cardElevation="@dimen/card_view_elevation">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/view_loader"
                layout="@layout/view_loader"/>

            <include
                android:id="@+id/view_empty"
                layout="@layout/view_empty"/>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/startLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin"
                android:drawableLeft="@drawable/ic_action_start"
                android:drawablePadding="4dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:textSize="@dimen/font_medium"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="B1003, Surya Complex, Citylight Main Road, Surat-395007" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/startTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_large"
                android:ellipsize="end"
                android:textColor="@color/item_color_time"
                android:textSize="@dimen/font_small"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/startLabel"
                tools:text="Sep 6, 2022 at 9.39 am" />

            <View
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_marginLeft="12dp"
                android:background="#FF0000FF"
                app:layout_constraintBottom_toTopOf="@id/endLabel"
                app:layout_constraintStart_toStartOf="@id/startLabel"
                app:layout_constraintTop_toBottomOf="@id/startLabel" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/endLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin"
                android:drawableLeft="@drawable/ic_action_end"
                android:drawablePadding="4dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:textSize="@dimen/font_medium"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/startTime"
                tools:text="B1003, Surya Complex, Citylight Main Road, Surat-395007" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/endTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_large"
                android:ellipsize="end"
                android:textColor="@color/item_color_time"
                android:textSize="@dimen/font_small"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/endLabel"
                tools:text="Sep 6, 2022 at 9.39 am" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/distanceLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_small"
                android:drawableLeft="@drawable/ic_action_stop"
                android:drawablePadding="4dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:textColor="@color/item_color_title"
                android:textSize="@dimen/font_medium"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/endTime"
                tools:text="Distance(km):" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/durationLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_small"
                android:drawableLeft="@drawable/ic_action_stop"
                android:drawablePadding="4dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:textColor="@color/item_color_title"
                android:textSize="@dimen/font_medium"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/distanceLabel"
                tools:text="Duration(min):" />

            <com.google.android.material.textfield.TextInputLayout

                style="@style/Widget.MileLog.TextInputLayout"
                android:id="@+id/notesLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:hint="@string/hint_notes"
                android:selectAllOnFocus="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/durationLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/notesInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/abeezee"
                    android:inputType="text"
                    android:maxLines="2"
                    android:selectAllOnFocus="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MileLog.TextInputLayout"
                android:id="@+id/tagLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:hint="@string/hint_tag"
                android:selectAllOnFocus="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notesLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tagInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="2"
                    android:selectAllOnFocus="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:src="@drawable/ic_action_play"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tagLabel" />

            <SeekBar
                android:id="@+id/seekbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_small"
                android:layout_marginVertical="@dimen/margin"
                app:layout_constraintLeft_toRightOf="@id/play"
                app:layout_constraintRight_toLeftOf="@id/mike"
                app:layout_constraintTop_toTopOf="@id/play"
                app:layout_constraintBottom_toBottomOf="@id/play"
                />
            <ImageButton
                android:id="@+id/mike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:src="@drawable/ic_action_mike"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tagLabel" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:text="@string/cancel"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/del_button"
                app:layout_constraintTop_toBottomOf="@id/play" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/del_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:text="@string/del"
                app:layout_constraintLeft_toRightOf="@id/cancel_button"
                app:layout_constraintRight_toLeftOf="@id/save"
                app:layout_constraintTop_toBottomOf="@id/play" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:text="@string/save"
                app:layout_constraintLeft_toRightOf="@id/del_button"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/play" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/group"
                android:layout_width="11dp"
                android:layout_height="15dp"
                app:constraint_referenced_ids="startLabel,endLabel,endTime,
                startTime,notesLabel,tagLabel,play,seekbar,mike,cancel_button,del_button,save" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</ScrollView>